--- a/style.css
+++ b/style.css
@@ -2,9 +2,19 @@ body {
   background-color: blanchedalmond;
 }
 
+#container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.rowContainer {
+  display: flex;
+  flex-direction: row;
+}
+
 .gridBox {
   border: solid red 1px;
   width: 64px;
   height: 64px;
-  display: block;
 }
