--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: blanchedalmond;
+  background-color: peachpuff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,9 +15,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid black;
+  border: solid goldenrod;
   width: 960px;
   height: 960px;
+}
+
+#sizeButton {
+  background-color: goldenrod;
 }
 
 .rowContainer {
@@ -26,5 +30,5 @@ body {
 }
 
 .gridBox {
-  background-color: blue;
+  background-color: blanchedalmond;
 }
